[gd_scene load_steps=6 format=2]

[ext_resource path="res://NeutronsDemo-Yz0Va.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://TitleScreen/ButtonPressed.png" type="Texture" id=2]
[ext_resource path="res://TitleScreen/Button.png" type="Texture" id=3]
[ext_resource path="res://Pause.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 400
outline_size = 20
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Pause" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="TextureButton" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1024.0
margin_top = -200.0
margin_right = 1024.0
margin_bottom = 824.0
rect_scale = Vector2( 0.1, 0.1 )
rect_pivot_offset = Vector2( 1024, 0 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/Resume"]
margin_right = 2064.0
margin_bottom = 1024.0
custom_fonts/font = SubResource( 1 )
text = "Resume"
align = 1
valign = 1

[node name="RestartLevel" type="TextureButton" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1024.0
margin_top = -50.0
margin_right = 1024.0
margin_bottom = 974.0
rect_scale = Vector2( 0.1, 0.1 )
rect_pivot_offset = Vector2( 1024, 0 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/RestartLevel"]
margin_top = 41.0
margin_right = 2064.0
margin_bottom = 1024.0
custom_fonts/font = SubResource( 1 )
text = "Restart
Level"
align = 1
valign = 1

[node name="MainMenu" type="TextureButton" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1024.0
margin_top = 100.0
margin_right = 1024.0
margin_bottom = 1124.0
rect_scale = Vector2( 0.1, 0.1 )
rect_pivot_offset = Vector2( 1024, 0 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/MainMenu"]
margin_top = 41.0
margin_right = 2064.0
margin_bottom = 1024.0
custom_fonts/font = SubResource( 1 )
text = "main
Menu"
align = 1
valign = 1

[connection signal="pressed" from="Control/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Control/RestartLevel" to="." method="_on_Restart_Level_pressed"]
[connection signal="pressed" from="Control/MainMenu" to="." method="_on_Main_Menu_pressed"]
